# hands-on-functional-programming-in-rust

./: README.md.txt
chapter01/: Cargo.toml
chapter01/src/: intro_binding.rs  intro_datatypes.rs  intro_expressions.rs  intro_functions.rs  intro_generics.rs  intro_iterators.rs  intro_mixoopfp.rs  intro_patterns.rs
chapter02/src/: main.rs
