[package]
name = "chapter01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "intro_generics"
path = "src/intro_generics.rs"

[[bin]]
name = "intro_functions"
path = "src/intro_functions.rs"
