[package]
name = "chapter01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "intro_generics"
path = "src/intro_generics.rs"

[[bin]]
name = "intro_functions"
path = "src/intro_functions.rs"

[[bin]]
name = "intro_iterators"
path = "src/intro_iterators.rs"

[[bin]]
name = "intro_expressions"
path = "src/intro_expressions.rs"

[[bin]]
name = "intro_binding"
path = "src/intro_binding.rs"

[[bin]]
name = "intro_datatypes"
path = "src/intro_datatypes.rs"

[[bin]]
name = "intro_mixoopfp"
path = "src/intro_mixoopfp.rs"
